--- a/website/src/css/master.css
+++ b/website/src/css/master.css
@@ -3,10 +3,20 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    overflow: hidden;
     font-family: "Montserrat", sans-serif;
-    background: url("../img/bg.png") no-repeat fixed center center;
-    background-size: cover;
     background-color: #000000;
+}
+
+.bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background: url("../img/bg.png") no-repeat fixed center center;
+    animation: fadeAndRotate 40s ease infinite;
 }
 
 .main-menu {
@@ -61,9 +71,14 @@ body {
     top: 0;
     left: 0;
     z-index: 1;
+    opacity: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
+}
+
+.bot-canvas.visible {
+    animation: fadeIn 2s ease-in forwards;
 }
 
 .chat {
@@ -80,7 +95,7 @@ body {
     width: 100%;
     height: 30px;
     transform: skewX(50deg);
-    background-color: #050505;
+    background-color: #080808;
 }
 
 .chat::after {
@@ -92,7 +107,7 @@ body {
     width: 36px;
     height: 100%;
     transform: skewY(40deg);
-    background-color: #050505;
+    background-color: #080808;
 }
 
 .chatlog {
@@ -181,4 +196,51 @@ body {
     width: 28px;
     right: 10px;
     top: calc(50% - 14px);
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeAndRotate {
+    0% {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
+    
+    25% {
+        opacity: 1;
+        transform: rotate(0deg);
+    }
+
+    49% {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
+
+    50% {
+        opacity: 0;
+        transform: rotate(180deg);
+    }
+
+    75% {
+        opacity: 1;
+        transform: rotate(180deg);
+    }
+
+    99% {
+        opacity: 0;
+        transform: rotate(180deg);
+    }
+
+    100% {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
 }
