--- a/website_alt/style.css
+++ b/website_alt/style.css
@@ -117,14 +117,20 @@ ul li.chatbot a{
 
 .about_title{
     position: absolute;
-    top: 10%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .about_title h1{
     color: #fff;
-    font-size: 30px;
+    font-size: 25px;
+}
+
+.about_title p{
+    color: #fff;
+    font-size: 25px;
+    text-align: center;
 }
 
 .chatbot_wireframe {
