--- a/website_alt/style.css
+++ b/website_alt/style.css
@@ -1,44 +1,29 @@
-*{
+body {
     margin: 0;
     padding: 0;
-    font-family: Century Gothic;
+    height: 100vh;
+    overflow-y: hidden;
+    background-color: #000;
 }
 
-#.home_background
-{
-    background-image: url(6.jpg);
-    background-size: 120%;
-    background-position-x: center;
-    background-position-y: 10%;
-    background-repeat: no-repeat;
-}
-
-#.about_background{
-    background-image: url(6.jpg);
-    background-size: 120%;
-    background-repeat: no-repeat;
-}
-
-.chatbot_background{
-    background-image: url(marvin_head.png);
+.chatbot_background {
+    background-image: url('img/marvin_head.png');
     background-size: 25%;
     background-repeat: no-repeat;
     background-position: center;
     background-position-y: 280px;
 }
 
-ul{
+ul {
+    top: 10px;
     text-align: center;
-    list-style: inside;
-    position: relative;
-    top: 50px;
 }
 
-ul li{
+.link {
     display: inline-block;
 }
 
-ul li a{
+.link a {
     text-decoration: none;
     color: #fff;
     padding: 5px 20px;
@@ -46,65 +31,50 @@ ul li a{
     transition: 0.6s ease;
 }
 
-ul li a:hover{
+.link a:hover {
     background-color: #fff;
     color: #000;
 }
 
-ul li.home a{
+.active a {
     background-color: #fff;
-    color: #000; 
+    color: #000;
 }
 
-ul li.about a{
-    background-color: #fff;
-    color: #000; 
-}
-
-ul li.chatbot a{
-    background-color: #fff;
-    color: #000;  
-}
-
-.main{
-    max-width: 1200px;
-    margin: auto;
-}
-
-.home_title{
+.home_title {
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.home_subtitle{
+.home_subtitle {
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.home_subtitle h1{
+.home_subtitle h1 {
     color: #fff;
     font-size: 15px;
     -webkit-text-stroke: 1px #000;
 }
 
-.home_title h1{
+.home_title h1 {
     color: #fff;
     font-size: 70px;
     -webkit-text-stroke: 1px black;
 }
 
-.home_button{
+.home_button {
     position: absolute;
     top: 53%;
     left: 50%;
     transform: translate(-50%, -50%);  
 }
 
-.btn{
+.btn {
     border: 1px solid #fff;
     padding: 10px 50px;
     color: #fff;
@@ -112,41 +82,27 @@ ul li.chatbot a{
     transition: 0.6s ease;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: #fff;
     color: #000;
 }
 
-.about_title{
+.about_title {
     position: absolute;
     top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.about_title h1{
+.about_title h1 {
     color: #fff;
     font-size: 25px;
 }
 
-.about_title p{
+.about_title p {
     color: #fff;
     font-size: 25px;
     text-align: center;
-}
-
-.chatbot_wireframe {
-    text-align: left;
-    outline: 2px solid white;
-    color:white;
-    font-weight:bold;
-    height:800px;
-    width: 1200px;
-    position: absolute;
-    left: 50%;
-    top: 50%; 
-    margin-left: -600px;
-    margin-top: -400px;
 }
 
 #chatbot_wframe {
@@ -163,25 +119,13 @@ ul li.chatbot a{
     margin-top: -400px;
 }
 
-#chatbot_wframe #chatbot_wframe_inside{
-    position: relative;
+#chatbot_wframe_inside {
     width: 100%;
     height: 100%;
     margin: auto;
+    color: #fff;
     margin-top: 60%;
     outline: 2px solid #fff;
     line-height: 70px;
     text-align: center;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-}
-
-particles-js{
-    height: 150%;
-    background: #262262;
-    size: 200%;
 }
