--- a/website/src/css/master.css
+++ b/website/src/css/master.css
@@ -5,18 +5,8 @@ body {
     padding: 0;
     overflow: hidden;
     font-family: "Montserrat", sans-serif;
-    background-color: #000000;
-}
-
-.bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background: url("../img/bg.png") no-repeat fixed center center;
-    animation: fadeAndRotate 40s ease infinite;
+    background: rgb(20, 20, 20);
+    background: radial-gradient(circle at 50% 55%, rgba(20, 20, 20, 1) 0%, rgba(0, 0, 0, 1) 50%);
 }
 
 .main-menu {
@@ -80,6 +70,27 @@ body {
 
 .bot-canvas.visible {
     animation: fadeIn 2s ease-in forwards;
+}
+
+.loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%) rotate(45deg) scale(0.3);
+}
+
+.stroke-still {
+    stroke: #232323;
+}
+
+.stroke-animation {
+    animation: stroke-spacing 2s ease, stroke-color 8s linear;
+    animation-iteration-count: infinite;
+    animation-delay: 0;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+    transform-origin: center center;
 }
 
 .chat {
@@ -180,11 +191,12 @@ body {
     padding: 10px;
     height: 100%;
     width: calc(100% - 50px);
-    font-size: 20px;
+    font-size: 18px;
     color: #ffffff;
     font-family: sans-serif;
     box-sizing: border-box;
     background-color: #252525;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .user-input:focus {
@@ -219,48 +231,38 @@ body {
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes stroke-spacing {
+    0% {
+        stroke-dasharray: 0 200;
     }
 
-    to {
-        opacity: 1;
+    45% {
+        stroke-dashoffset: 0;
+        stroke-dasharray: 200 200;
+    }
+
+    90% {
+        stroke-dashoffset: -200;
+        stroke-dasharray: 200 200;
+    }
+    
+    100% {
+        stroke-dashoffset: -200;
+        stroke-dasharray: 200 200;
     }
 }
 
-@keyframes fadeAndRotate {
-    0% {
-        opacity: 0;
-        transform: rotate(0deg);
-    }
-    
-    25% {
-        opacity: 1;
-        transform: rotate(0deg);
-    }
-
-    49% {
-        opacity: 0;
-        transform: rotate(0deg);
-    }
-
-    50% {
-        opacity: 0;
-        transform: rotate(180deg);
-    }
-
-    75% {
-        opacity: 1;
-        transform: rotate(180deg);
-    }
-
-    99% {
-        opacity: 0;
-        transform: rotate(180deg);
-    }
-
-    100% {
-        opacity: 0;
-        transform: rotate(0deg);
-    }
+@keyframes stroke-color {
+    0% { stroke: #3498DB; }
+    24% { stroke: #643232; }
+    25% { stroke: #327864; }
+    49% { stroke: #327864; }
+    50% { stroke: #32526e; }
+    74% { stroke: #32526e; }
+    75% { stroke: #78325a; }
+    99% { stroke: #78325a; }
 }
