--- a/app/css/index.css
+++ b/app/css/index.css
@@ -12,13 +12,17 @@ body {
 }
 
 #particlesBG {
+    position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 5;
     width: 100vw;
     height: 100vh;
-    position: absolute;
     background-color: #080808;
+}
+
+#particlesBG > canvas {
+    animation: fadeIn 0.5s ease-in forwards;
 }
 
 #particlesBG.vanish {
@@ -32,6 +36,7 @@ body {
 
 .btn-start,
 .title-start {
+    z-index: 5;
     transition: opacity 0.5s ease;
 }
 
@@ -77,6 +82,7 @@ body {
     width: 100%; 
     margin: 0;
     padding: 0;
+    z-index: 2;
     position: absolute;
     list-style-type: none;
     background-color: #222222;
@@ -185,31 +191,9 @@ body {
 .chatlog {
     height: 82%;
     padding: 10px 15px;
-    overflow-y: scroll;
-    overflow-x: hidden;
     word-wrap: break-word;
     box-sizing: border-box;
     background-color: #111111;
-}
-
-.chatlog::-webkit-scrollbar,
-.user-input::-webkit-scrollbar {
-    width: 10px;
-}
-
-.chatlog::-webkit-scrollbar-track,
-.user-input::-webkit-scrollbar-track {
-    background-color: #222222;
-}
-
-.chatlog::-webkit-scrollbar-thumb,
-.user-input::-webkit-scrollbar-thumb {
-    background-color: #444444;
-}
-
-.chatlog::-webkit-scrollbar-thumb:hover,
-.user-input::-webkit-scrollbar-thumb:hover {
-    background-color: #555555;
 }
 
 .chatlog .bot,
@@ -301,18 +285,25 @@ body {
 }
 
 .user-input[disabled] {
-    cursor: not-allowed;
+    cursor: default;
     background-color: #151515;
 }
 
 .user-submit.disabled {
-    cursor: not-allowed;
+    cursor: default;
     background-color: #21788b;
+}
+
+.interface-about {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 50px 10%;
+    box-sizing: border-box;
 }
 
 .interface-about h2 {
     font-size: 28px;
-    margin-top: 30px;
 }
 
 .interface-about h3 {
@@ -325,6 +316,27 @@ body {
 
 .interface-about a {
     color: #2cb7fc;
+}
+
+.scroll {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.scroll::-webkit-scrollbar {
+    width: 8px;
+}
+
+.scroll::-webkit-scrollbar-track {
+    background-color: #222222;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: #444444;
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #555555;
 }
 
 @keyframes fadeIn {
